tdf#157112: fix off-by-one error in /LastChar of PDF Type 3 fonts

It should be the index of the last glyph in the subset, so nGlyphs - 1.

Change-Id: I62853a27b602d7b3e6b6265555542dd417438fcc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156630
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@libreoffice.org>